# cognee

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  RELEASING.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/: core-team.txt
.github/workflows/: basic_tests.yml  ghcr-backend.yml  ghcr-frontend.yml  ghcr-mcp.yml  release.yml  test_suites.yml
alembic/versions/: oidc_groups_support.py
cognee/: get_token.py
cognee-frontend/: .dockerignore  .env.template  Dockerfile  next.config.mjs  package.json
cognee-frontend/src/app/dashboard/: InstanceDatasetsAccordion.tsx
cognee-frontend/src/utils/: fetch.ts
cognee-mcp/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
cognee-starter-kit/: .gitignore
cognee/api/: client.py
cognee/api/shared/: __init__.py  error_handling.py
cognee/api/v1/ui/: ui.py
cognee/modules/users/: get_fastapi_users.py  get_user_manager.py
cognee/modules/users/authentication/: get_api_auth_backend.py  get_client_auth_backend.py
cognee/modules/users/methods/: get_user_by_email.py
cognee/modules/users/models/: Group.py  Tenant.py  User.py  UserGroup.py  __init__.py
cognee/shared/: rate_limiting.py
cognee/shared/security/: __init__.py  jwt_config.py  url_validator.py
cognee/tasks/web_scraper/: default_url_crawler.py
config/: group_mappings.example.json
deployment/kubernetes/: README.md
deployment/kubernetes/base/: kustomization.yaml
deployment/kubernetes/flux/: README.md  ks.yaml.j2  variables.md
evals/: README.md
(+41 files in other folders)
