[project]
name = "cognee-mcp"
version = "0.5.10"
description = "Cognee MCP server"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # For local development, use: cognee[postgres,docs,neo4j] @ file:../
    # For production, use minimum version constraint matching the monorepo version
    "cognee[postgres,docs,neo4j]>=0.5.10",
    "fastmcp>=2.10.0,<3.0.0",
    "mcp>=1.12.0,<2.0.0",
    "uv>=0.6.3,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

authors = [
    { name = "Boris Arzentar", email = "boris@topoteretes.com" },
    { name = "Igor Ilic", email = "igor@topoteretes.com" },
    { name = "Laszlo Hajdu", email = "laszlo@topoteretes.com" },
]

[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "debugpy>=1.8.12,<2.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
cognee = "src:main"
cognee-mcp = "src:main_mcp"
